More spec-conformant type checking
Minor cleanup to DataType