@@ -4,9 +4,13 @@ import java.lang.reflect.GenericArrayType;
 import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Type;
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
+
+import static works.bosk.boson.types.DataType.BindableOptions.IS_ASSIGNABLE;
+import static works.bosk.boson.types.DataType.BindableOptions.IS_BINDABLE;
 
 public sealed interface DataType permits KnownType, UnknownType {
 	KnownType VOID = new PrimitiveType(void.class);
@@ -54,13 +58,7 @@ public sealed interface DataType permits KnownType, UnknownType {
 				(Class<?>) pt.getRawType(),
 				Stream.of(pt.getActualTypeArguments()).map(DataType::of).toList());
 		} else if (type instanceof java.lang.reflect.TypeVariable<?> tv) {
-			Type[] bounds = tv.getBounds();
-			if (bounds.length == 1 && bounds[0].equals(Object.class)) {
-				// Prefer to represent as unbounded
-				return new TypeVariable(tv.getName(), List.of());
-			} else {
-				return new TypeVariable(tv.getName(), Arrays.asList(bounds));
-			}
+			return new TypeVariable(tv.getName(), Arrays.asList(tv.getBounds()));
 		} else if (type instanceof java.lang.reflect.WildcardType w) {
 			return ofWildcard(w);
 		} else if (type instanceof GenericArrayType t) {
@@ -93,12 +91,14 @@ public sealed interface DataType permits KnownType, UnknownType {
 	 * {@code A.isAssignableFrom(B)} if a value of type B can be assigned to
 	 * a variable of type A.
 	 * <p>
-	 * Note that this is neither weaker nor stronger than {@link #isBindableFrom(DataType)}.
+	 * Note that this is neither weaker nor stronger than {@link #isBindableFrom}.
 	 * Type variables will only accept themselves or other type variables
 	 * that are nominally subtypes of them,
 	 * but concrete types can be assigned from subtypes.
 	 */
-	boolean isAssignableFrom(DataType other);
+	default boolean isAssignableFrom(DataType other) {
+		return isBindableFrom(other, IS_ASSIGNABLE, new HashMap<>());
+	}
 
 	/**
 	 * {@code A.isBindableFrom(B)} if a value of type List<B>
@@ -108,7 +108,34 @@ public sealed interface DataType permits KnownType, UnknownType {
 	 * Type variables will accept types that conform to their bounds,
 	 * but concrete types cannot be assigned from subtypes.
 	 */
-	boolean isBindableFrom(DataType other);
+	default boolean isBindableFrom(DataType other) {
+		return isBindableFrom(other, IS_BINDABLE, new HashMap<>());
+	}
+
+	/**
+	 * @param allowSubtypes if true, allows subtypes of {@code this} to match.
+	 *   Says nothing about handling of any type variables encountered:
+	 *   those are governed by the language spec.
+	 * @param freeVariables if false, unbound type variables match only themselves
+	 */
+	record BindableOptions(boolean allowSubtypes, boolean freeVariables){
+		public static final BindableOptions IS_BINDABLE = new BindableOptions(false, true);
+		public static final BindableOptions IS_ASSIGNABLE = new BindableOptions(true, false);
+
+		/**
+		 * Often, whether subtypes are allowed varies during the matching process.
+		 * This lets is assert a new value for that flag while keeping the other the same.
+		 */
+		public BindableOptions withAllowSubtypes(boolean v) {
+			return new BindableOptions(v, this.freeVariables);
+		}
+
+		public boolean matches(Class<?> target, Class<?> candidate) {
+			return allowSubtypes() ? target.isAssignableFrom(candidate) : target.equals(candidate);
+		}
+	}
+
+	boolean isBindableFrom(DataType other, BindableOptions options, Map<String, DataType> bindingsSoFar);
 
 	default boolean isAssignableFrom(Type type) {
 		return isAssignableFrom(DataType.of(type));
